--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
-    background-color: rgba(240, 145, 53, 0.8) ;
-    margin: 0;
-    padding: 0;
+  background-color: rgba(240, 145, 53, 0.8);
+  margin: 0;
+  padding: 0;
 }
 
 .logoNormal {
@@ -11,11 +11,29 @@ body {
 .max-width-all {
   max-width: 1200px;
   margin: 0 auto;
-  
 }
 
 .header-div {
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
+}
+
+.burger-menu-div {
+  height: 20px;
+  width: 20px;
+  margin: auto 40px auto auto;
+  border: 1px solid black;
+  aspect-ratio: 1 / 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.burgerstripes {
+  height: 4px;
+  width: 18px;
+  border-radius: 2px;
+  background-color: white;
 }
