--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   --secondary-color: #fdfdfb;
 }
 
-.primary{
+.primary {
   color: var(--primary-color);
 }
 
@@ -16,6 +16,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 .logoNormal {
@@ -37,7 +38,7 @@ body {
   height: 32px;
   width: 32px;
   margin: auto 40px auto auto;
-  
+
   aspect-ratio: 1 / 1;
   display: flex;
   flex-direction: column;
@@ -53,7 +54,7 @@ body {
 }
 
 .burgerstripes:hover {
-  filter:drop-shadow(0 0 4px blue)
+  filter: drop-shadow(0 0 4px blue);
 }
 
 .mainContainer {
@@ -137,7 +138,6 @@ body {
   padding: 12px;
   object-fit: cover;
   object-position: 100% 30%;
-  
 }
 
 a {
@@ -252,7 +252,6 @@ a {
   text-align: start;
   padding: 8px;
   font-size: large;
-  
 }
 
 .orderItemsAmount {
@@ -280,6 +279,14 @@ a {
   width: auto;
   text-align: center;
 }
+@media (min-width: 712px){
+  .footerSecond {
+    display: none;
+  }
+  .footerBasket {
+    display: none;
+  }
+}
 
 @media (max-width: 712px) {
   .footerSecond {
@@ -289,18 +296,29 @@ a {
 
   }
   .footerFirst {
-  display: none;
+    display: none;
+  }
+
+  .purchaseBasket {
+    display: none;
+  }
+
+  .basketButton {
+    height: 100px;
+    background-color: blue;
+    color: #fdfdfb;
+    width: 100%;
+    border-style: none;
+    font-size: 36px;
+  }
+  .menuProposal {
+  
+  transform: translateY(-50%);
 }
 
-.purchaseBasket {
-  display: none;
-}
-
-.basketButton {
+.footerBasket {
   background-color: blue;
-  color: #fdfdfb;
-  width: 100%;
-  border-style: none;
+    text-align: center;
+    color: #fdfdfb;
 }
-
 }
