--- a/styles/basket.css
+++ b/styles/basket.css
@@ -1,4 +1,3 @@
-/* Warenkorb etc. */
 .overlay {
   display: none;
   position: fixed;
@@ -7,7 +6,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
-  z-index: 900; /* little less then basket from 1000 */
+  z-index: 900;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
@@ -16,19 +15,69 @@
   display: block;
   opacity: 1;
 }
- 
+
 .purchaseBasket {
   position: sticky;
   top: 0;
   align-self: flex-start;
-  height: fit-content;
-  width: 250px;
+  height: 100vh;
+  width: 400px;
   box-shadow: -1px 0px 1px rgba(3, 7, 18, 0.02),
     -3px 0px 4px rgba(3, 7, 18, 0.03), -7px 1px 9px rgba(3, 7, 18, 0.05),
     -13px 2px 15px rgba(3, 7, 18, 0.06), -20px 3px 24px rgba(3, 7, 18, 0.08); /* shadow-generator: smoothshadow.com */
 
   transition: all 0.3s ease;
   z-index: 5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: content-box;
+}
+
+.basketContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.amountBasketContainerClass {
+  flex-shrink: 0;
+  background: white;
+  position: sticky;
+  bottom: 0;
+}
+
+.basketHeader {
+  flex-shrink: 0;
+  background-color: #ffff;
+  padding: 1rem;
+  border-bottom: 1px solid #ddd;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
+.basketFooter {
+  flex-shrink: 0;
+  background-color: #fff;
+  padding: 1rem;
+  position: sticky;
+  bottom: 0;
+  z-index: 10;
+}
+
+.orderButton {
+  width: 100%;
+  background-color: #ff6b00;
+  color: white;
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 8px;
+  padding: 0.8rem;
+  cursor: pointer;
+}
+.orderButton:hover {
+  background-color: #ff8533;
 }
 
 .plusIconBasket {
@@ -43,6 +92,7 @@
   background-color: rgb(194, 194, 194);
   filter: drop-shadow(0 0 4px blue);
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .minusIcon {
@@ -57,6 +107,7 @@
   background-color: rgb(194, 194, 194);
   filter: drop-shadow(0 0 4px blue);
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .headlineBasket {
@@ -76,11 +127,16 @@
   background-color: rgb(194, 194, 194);
   filter: drop-shadow(0 0 4px blue);
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .purchaseBasketItem {
   border-bottom: 1px solid rgb(208, 208, 208);
   border-top: 1px solid rgb(208, 208, 208);
+  flex-grow: 1;
+  overflow-y: auto;
+  padding: 1rem;
+  background-color: #fafafa;
 }
 
 .purchaseItemHeadline {
@@ -101,8 +157,12 @@
   padding: 6px;
 }
 
+.buttonOpenBasket {
+  display: none;
+}
+
 @media (max-width: 712px) {
-    .basketButton {
+  .basketButton {
     height: 100px;
     background-color: blue;
     color: #fdfdfb;
@@ -122,16 +182,19 @@
     box-shadow: -2px 0 20px rgba(0, 0, 0, 0.2);
     transform: translateX(100%); /* standardmäßig versteckt */
     z-index: 1000;
+    overflow-x: hidden;
     overflow-y: auto;
+    height: 100vh;
   }
 
-  
   .purchaseBasket.active {
     transform: translateX(0);
   }
 
-    .buttonOpenBasket {
+  .buttonOpenBasket {
+    display: inline;
     padding: 10px 20px;
+    margin: 10px 0;
     background: #007bff;
     color: white;
     border: none;
