--- a/styles/standard.css
+++ b/styles/standard.css
@@ -45,4 +45,9 @@ body {
 
 .burgerstripes:hover {
   filter: drop-shadow(0 0 4px blue);
+  cursor: pointer;
+}
+
+button:hover {
+  cursor: pointer;
 }
